--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,10 +51,10 @@
 		<location>/WEB-INF/views/common/error500.jsp</location>
 	</error-page>
     <!-- jsp config -->
-    <jsp-config>
+    <!-- <jsp-config>
 		<jsp-property-group>
 			<url-pattern>*.jsp</url-pattern>
 			<include-prelude>/WEB-INF/views/common/var.jspf</include-prelude>
 		</jsp-property-group>
-	</jsp-config>
+	</jsp-config> -->
 </web-app>
