--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,11 @@
 		<jaxb-impl-version>2.1</jaxb-impl-version>
 		<jackson-mapper-asl-version>1.9.13</jackson-mapper-asl-version>
 		<json-lib-version>2.4</json-lib-version>
+		<jstl-version>1.2</jstl-version>
 		<jsoup-version>1.11.2</jsoup-version>
 		<dbcp-version>1.4</dbcp-version>
 		<spring-jdbc-version>2.0.6</spring-jdbc-version>
+		<mariadb-java-version>2.6.1</mariadb-java-version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -119,7 +121,7 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<version>${jstl-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-el</groupId>
@@ -207,6 +209,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>${jsoup-version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+		    <version>${mariadb-java-version}</version>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -214,6 +221,11 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
 		<!-- Root -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
